--- a/app/src/main/res/layout/grid_cell.xml
+++ b/app/src/main/res/layout/grid_cell.xml
@@ -3,12 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/gridCell"
+    >
 
 <ImageView
     android:id="@+id/image"
     android:layout_width="0dp"
     android:layout_height="0dp"
+
+    app:layout_constraintWidth_default="percent"
+    app:layout_constraintHeight_default="percent"
+    app:layout_constraintWidth_percent="0.5"
+    app:layout_constraintHeight_percent="0.5"
 
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
