--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -13,12 +13,14 @@
         app:layout_constraintBottom_toTopOf="@id/selector"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
         />
 
     <FrameLayout
         android:id="@+id/selector"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/map"
         app:layout_constraintLeft_toLeftOf="parent"
