--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -91,13 +91,13 @@
         android:layout_marginLeft="8dp" />
 
     <Button
-        android:id="@+id/settings"
+        android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/timeIncrement"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
-        android:text="Settings"/>
+        android:text="Save"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
