--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -53,6 +53,16 @@
         android:layout_marginLeft="8dp"/>
 
     <TextView
+        android:id="@+id/income"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/time"
+        app:layout_constraintLeft_toRightOf="@id/moneyVal"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"/>
+
+
+    <TextView
         android:id="@+id/population"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -99,5 +109,15 @@
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         android:text="Save"/>
+
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/employmentVal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="#FFFF0000"
+        android:layout_marginTop="4dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
