--- a/app/src/main/res/layout/grid_cell.xml
+++ b/app/src/main/res/layout/grid_cell.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/gridCell"
     >
-
+<!--
     <ImageView
         android:id="@+id/land"
         android:layout_width="0dp"
@@ -14,8 +14,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/ic_grass1"/>
+-->
     <ImageView
         android:id="@+id/image"
         android:layout_width="0dp"
@@ -23,9 +24,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/ic_grass1"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
