--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D3D3D3"
@@ -11,7 +12,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:text="Details"
         android:textSize="60sp"
         android:typeface="monospace"
@@ -37,8 +38,8 @@
         android:textSize="16sp"
         android:typeface="monospace"
         app:layout_constraintBottom_toTopOf="@id/ownerText"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/title"
+        app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@id/error" />
 
 
@@ -47,10 +48,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="8dp"
         android:typeface="monospace"
-        app:layout_constraintStart_toStartOf="@+id/type"
-        app:layout_constraintTop_toBottomOf="@id/type" />
+        app:layout_constraintLeft_toRightOf="@id/ownerText"
+        app:layout_constraintTop_toBottomOf="@id/type"
+
+        />
 
     <TextView
         android:id="@+id/ownerText"
@@ -58,9 +60,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         android:text="Owner: "
         android:typeface="monospace"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/type" />
 
@@ -68,9 +70,9 @@
         android:id="@+id/coordinates"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:typeface="monospace"
-
-        app:layout_constraintStart_toStartOf="@+id/owner"
+        app:layout_constraintLeft_toRightOf="@id/coordText"
         app:layout_constraintTop_toBottomOf="@id/owner" />
 
     <TextView
@@ -78,20 +80,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="30dp"
         android:text="Coordinates: "
         android:typeface="monospace"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/owner" />
 
-
     <EditText
         android:id="@+id/newOwner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:typeface="monospace"
         android:layout_marginLeft="40dp"
-        app:layout_constraintBottom_toTopOf="@id/image"
+        android:layout_marginTop="20dp"
+        android:typeface="monospace"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/coordinates" />
 
@@ -99,11 +101,10 @@
         android:id="@+id/setOwner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Set new owner"
         android:typeface="monospace"
-        app:layout_constraintBottom_toTopOf="@id/image"
         app:layout_constraintLeft_toRightOf="@id/newOwner"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/coordinates" />
 
     <ImageView
@@ -111,13 +112,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginRight="24dp"
         android:typeface="monospace"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/setOwner"
-        app:layout_constraintBottom_toTopOf="@id/back"
-        />
+        app:layout_constraintEnd_toEndOf="@+id/type"
+        app:layout_constraintStart_toStartOf="@+id/type"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
         android:id="@+id/back"
@@ -125,10 +125,10 @@
         android:layout_height="wrap_content"
         android:text="Return to Map"
         android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/setOwner"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginRight="40dp"
+        app:layout_constraintTop_toBottomOf="@id/type"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
     <Button
         android:id="@+id/photo"
@@ -136,7 +136,7 @@
         android:layout_height="wrap_content"
         android:text="Take Photo"
         android:typeface="monospace"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="40dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back"
         />
