--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#D3D3D3"
+    android:typeface="monospace"
+
+    >
 
     <Button
         android:id="@+id/newGameButton"
@@ -16,6 +20,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
+        android:typeface="monospace"
+
         />
 
     <Button
@@ -27,6 +33,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/newGameButton"
         android:layout_marginTop="8dp"
+        android:typeface="monospace"
+
         />
 
     <TextView
@@ -40,6 +48,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/author"
+        android:typeface="monospace"
         />
 
     <TextView
@@ -50,7 +59,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
-
+        android:typeface="monospace"
         />
 
     <TextView
@@ -63,5 +72,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loadGameButton"
+        android:typeface="monospace"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
