--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#D3D3D3"
+    android:typeface="monospace"
+
+    >
 
     <FrameLayout
         android:id="@+id/status"
@@ -13,6 +17,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/map"
+        android:background="#D3D3D3"
         android:layout_marginTop="8dp"/>
 
     <FrameLayout
@@ -24,7 +29,9 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/status" />
+        app:layout_constraintTop_toBottomOf="@+id/status"
+        android:background="#D3D3D3"
+        />
 
     <FrameLayout
         android:id="@+id/selector"
@@ -35,6 +42,7 @@
         app:layout_constraintTop_toBottomOf="@id/map"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:background="#D3D3D3"
         />
 
 
