--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,4 +4,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/mapRecyclerView"/>
+    android:id="@+id/mapRecyclerView"
+    android:background="#D3D3D3"
+    />
