--- a/app/src/main/res/layout/fragment_selector.xml
+++ b/app/src/main/res/layout/fragment_selector.xml
@@ -5,4 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/selectorRecyclerView"
+    android:background="#D3D3D3"
     />
