--- a/app/src/main/res/layout/grid_cell.xml
+++ b/app/src/main/res/layout/grid_cell.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/gridCell"
+    android:background="#D3D3D3"
     >
 <!--
     <ImageView
