--- a/app/src/main/res/layout/list_selection.xml
+++ b/app/src/main/res/layout/list_selection.xml
@@ -3,7 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/listSelection">
+    android:id="@+id/listSelection"
+    android:background="#D3D3D3"
+    >
 
     <ImageView
         android:id="@+id/itemImage"
@@ -28,6 +30,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/itemImage"
         android:layout_marginBottom="8dp"
+        android:typeface="monospace"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
